test/tests/compiler/18_structures/invalid_parse/struct_decl_two_kws.plx
type struc struc s;  # struct keyword can only appear once in a type declaration

pub fn main(none) i32 {
    return 1
}
